gcc-defaults (1.101) UNRELEASED; urgency=low

  * Update rebuild-gcj-db for gcj-4.5 and gcj-4.6.
  * debian/rules: Fix libgcj-bc.so.1 symlink for multiarch path,
    when building for multiarch (Martin Pitt).

 -- Matthias Klose <doko@debian.org>  Sun, 27 Mar 2011 16:59:23 +0200

gcc-defaults (1.100) unstable; urgency=low

  * c99: Do not accept -ansi option (Mike Miller). Closes: #617321.
  * c99: Clarify c99 error message incorrectly refering to ANSI C
    (Mike Miller). Closes: #618718.
  * On hppa, default gcc, g++, gobjc, gobjc++, gfortran to GCC-4.5.
  * Build gccgo and gccgo-multilib packages.

 -- Matthias Klose <doko@debian.org>  Sun, 27 Mar 2011 13:05:18 +0200

gcc-defaults (1.99) unstable; urgency=low

  * gdc: Fix versioned dependency on gdc-4.4.

 -- Matthias Klose <doko@debian.org>  Mon, 07 Mar 2011 22:43:33 +0100

gcc-defaults (1.98) unstable; urgency=low

  * Stop building gpc. Closes: #613923.
  * Default to gdc-4.4.
  * On amd64, armel, armhf, i386, powerpc, ppc64, kfreebsd-amd64
    and kfreebsd-i386:
    Default gcc, g++, gobjc, gobjc++, gfortran to GCC-4.5.
  * Do not install anymore the sparc gcc/g++ wrappers.

 -- Matthias Klose <doko@debian.org>  Sun, 06 Mar 2011 03:10:53 +0100

gcc-defaults (1.97) unstable; urgency=low

  * On armhf, point gdc to gdc-4.4.
  * Tighten build dependency on python. Closes: #604188.
  * Add Vcs-* attributes to the control file. Closes: #597058.

 -- Matthias Klose <doko@debian.org>  Mon, 06 Dec 2010 02:28:32 +0100

gcc-defaults (1.96) unstable; urgency=low

  * Bump dependencies to 4.4.5.
  * Bump gdc version to 1.060.
  * Build using dh_python2 instead of python-central.

 -- Matthias Klose <doko@debian.org>  Tue, 05 Oct 2010 10:19:12 +0200

gcc-defaults (1.95) unstable; urgency=low

  * Fix libgcj-bc shlibs file. Closes: #584545.

 -- Matthias Klose <doko@debian.org>  Sat, 05 Jun 2010 19:05:46 +0200

gcc-defaults (1.94) unstable; urgency=low

  * Bump dependencies to 4.4.4 / 4.3.5.
  * Build gdc for sparc.